--- a/application/modules/admin/views/scripts/content-management/add-post.phtml
+++ b/application/modules/admin/views/scripts/content-management/add-post.phtml
@@ -20,7 +20,7 @@
                 </tr>
                 <tr>
                     <td class="span2">Body:</td>
-                    <td class="span8"><textarea id="post_body" name="post_body" required></textarea></td>
+                    <td class="span8"><textarea id="post_body" name="post_body"></textarea></td>
                 </tr>
                 <tr>
                     <td>Publish:</td>
