--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -17,9 +17,9 @@ if ($auth->hasIdentity()) {
             if ($auth->hasIdentity()):
                 ?>
                 <div id="log-out">
-                    <font>Welcome!!</font><a href="<?php echo BASE_URL . '/admin/user/profile' ?>"><?php echo $username; ?></a>
+                    <font>Welcome!!</font><a href="<?php echo BASE_URL . 'admin/user/profile' ?>"><?php echo $username; ?></a>
                     <a href="<?php echo BASE_URL; ?>admin/">Home</a>
-                    <a href="<?php echo BASE_URL; ?>admin/user/logout">Log Out</a>
+                    <a href="<?php echo BASE_URL; ?>admin/index/logout">Log Out</a>
                 </div>
             <?php endif; ?>
         </div >
