--- a/application/modules/admin/views/scripts/user/user-list.phtml
+++ b/application/modules/admin/views/scripts/user/user-list.phtml
@@ -27,7 +27,7 @@
                 $edit_link = $this->url(array(
                     'controller' => 'user',
                     'action' => 'edit-user',
-                    'user-id'=>7
+                    'user-id'=>$value['id']
                 ));
                 ?>
                 <?php
