complete post management (thursday 9:53pm)

--- a/application/modules/admin/views/scripts/content-management/add-post.phtml
+++ b/application/modules/admin/views/scripts/content-management/add-post.phtml
@@ -1,5 +1,5 @@
 
-<script type="text/javascript" src="../../ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="<?php echo BASE_URL;?>ckeditor/ckeditor.js"></script>
 <div class="container">
     <div class="container">
         <h4>Add Posts <a href="post-list" class="btn btn-info btn-small">View Posts</a></h4>
