--- a/application/modules/admin/views/scripts/user/profile.phtml
+++ b/application/modules/admin/views/scripts/user/profile.phtml
@@ -8,7 +8,7 @@
     <hr>
     <div class="profile-pic gallery left-pull">
         
-                <img src="<?php echo BASE_URL; ?>/img/uploads/<?php echo $data['image_name']; ?>" width="200px" height="200px"/>
+                <img src="<?php echo BASE_URL; ?>img/uploads/<?php echo $data['image_name']; ?>" width="200px" height="200px"/>
             
     </div>
     <div class="pull-left">
