--- a/application/modules/admin/views/scripts/gallery/edit-photos.phtml
+++ b/application/modules/admin/views/scripts/gallery/edit-photos.phtml
@@ -1,4 +1,40 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Gallery</b> and script/action name <b>editPhotos</b></p>
-</div>
+<?php
+$details = $this->image_details;
+?>
+<form method="post"  >
+    <table class ="table">
+        <tr>
+            <td>
+                <ul class="thumbnails" >
+                    <li class="span4">
+                    <div class="thumbnail">
+                <img src="<?php echo BASE_URL; ?>img/uploads/<?php echo $details['name']; ?>" />
+                
+                    </div>
+                        </li>
+                </ul>
+                    </td>
+        </tr>
+        <tr>
+            <td>
+                Caption: <input type="text" name='caption' value="<?php echo $details['image_caption']; ?>"/>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Publish:
+               <label class="radio inline">Yes</label>
+                    <input type="radio" class="radio" name="active"  value="Yes"/>
+                    <label class="radio inline">No</label>
+                    <input type="radio" class="radio" name="active"  value="No"/>
+            </td>
+        </tr>
+        <tr>
+            
+            <td>
+                <input type="submit" value="Update" class="btn btn-small btn-edit-image btn-inverse"/>
+            </td>
+        </tr>
+    </table>
+
+</form>
