--- a/application/modules/default/views/scripts/news/index.phtml
+++ b/application/modules/default/views/scripts/news/index.phtml
@@ -8,7 +8,7 @@ $academic=$this->academicSidebar;
 <title>News & Events</title>
 <div class="row-fluid">
     <div id='main_container' class="span12">
-        <h1 id="head">News & Events</h1>
+        <h1 class="page-head">News & Events</h1>
         <div id="container" class="span8">
             <div class="news-body"  >
                 
