--- a/application/modules/default/views/scripts/gallery/index.phtml
+++ b/application/modules/default/views/scripts/gallery/index.phtml
@@ -9,7 +9,7 @@ $news = $this->newsSidebar;
 $academic = $this->academicSidebar;
 $contact = $this->contact;
 ?>
-<title>About Us</title>
+<title>Gallery</title>
 <div class="row-fluid">
 
     <div id='main_container' class="span12">
